--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "yiisoft/yii2-bootstrap4": "^2.0",
         "mdmsoft/yii2-admin": "~2.0",
         "moonlandsoft/yii2-phpexcel": "^2.0",
-        "2amigos/yii2-tinymce-widget": "~1.1"
+        "2amigos/yii2-tinymce-widget": "~1.1",
+        "kartik-v/yii2-widget-datetimepicker": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
@@ -40,6 +41,9 @@
         "process-timeout": 1800,
         "fxp-asset": {
             "enabled": false
+        },
+        "allow-plugins": {
+            "yiisoft/yii2-composer": true
         }
     },
     "scripts": {
