--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "mdmsoft/yii2-admin": "~2.0",
         "moonlandsoft/yii2-phpexcel": "^2.0",
         "2amigos/yii2-tinymce-widget": "~1.1",
-        "kartik-v/yii2-widget-datetimepicker": "dev-master"
+        "kartik-v/yii2-widget-datetimepicker": "dev-master",
+        "kartik-v/yii2-widget-select2": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
